--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,32 @@
-.App {
+.Main-Container {
+  display: grid;
+  grid-template-columns: 6vh 31.5vh;
+  grid-template-rows: auto auto;
+}
+.Navbar {
+  grid-column: span 3;
+  background-color: lightgray;
+  text-align: center;
+  align-items: center;
+  height: 4vh;
+  min-height: 20px;
+}
+
+.Space-Selector {
+  grid-column: 1;
+  background-color: lightblue;
+  text-align: center;
+  height: 96vh;
+}
+
+.Thread-Selector {
+  grid-column: 2;
+  background-color: lightgreen;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Chat-Screen {
+  grid-column: 3;
+  background-color: lightyellow;
+  text-align: center;
 }
